# chezai

./: .gitignore  README.md  readCodeSys.md  start_vehicle.sh  test_dht11  test_dht11.c
VehicleTerminal/: .baidu_asr_token  BT_AUDIO_VEHICLETERMINAL_REPORT.md  BluetoothAudio.cpp  Makefile  README.md  VehicleTerminal.pro  VehicleTerminal.pro.bak  VehicleTerminal.pro.user.b50ae01  bt_audio_service.py  camera_thread.cpp  camera_thread.h  camera开发.md  clock.cpp  dht11.cpp  main.cpp.bak  mainwindow.cpp  mainwindow.cpp.bak  mainwindow.h  mjpeg_server.cpp  mjpeg_server.h  moc_ap3216.cpp  moc_baidumap.cpp  moc_capture_thread.cpp  moc_clock.cpp  moc_dht11.cpp  moc_mainwindow.cpp  moc_monitor.cpp  moc_musicplayer.cpp  moc_radar_reader.cpp  moc_radar_widget.cpp  moc_searchmusic.cpp  moc_settingwindow.cpp  moc_speechrecognition.cpp  moc_weather.cpp  rtmp_streamer.cpp  rtmp_streamer.h  settingwindow.cpp  settingwindow.h  speechrecognition.cpp  speechrecognition.h  (+14 more)
VehicleTerminal/Map/: baidumap.cpp  gps.c  gps.h
VehicleTerminal/Monitor/: ap3216.cpp  capture_thread.cpp  capture_thread.h  monitor.cpp
VehicleTerminal/Music/: music_worker.cpp  music_worker.h  musicplayer.cpp  musicplayer.h
VehicleTerminal/Radar/: radar_reader.cpp  radar_widget.cpp  radar_widget.h
VehicleTerminal/Weather/: weather.cpp
VehicleTerminal/camera_qt/: camera_qt  camera_qt.pro  camera_thread.cpp  camera_thread.h  camera_thread_try.cpp  mainwindow.cpp  mainwindow.h
VehicleTerminal/whisper_qwen_qt_unite/: whiper_qwen_qt.md
ai_voice/: CMakeLists.txt  README.md  RK3588S_LLM_部署流程.md  voice_pipeline_test.sh  whisper_qwen_unite.md
ai_voice/include/: i_asr_engine.h  i_llm_engine.h  i_tts_engine.h  llm_engine.h  local_asr.h  mic_capture.h  tts_engine.h  voice_pipeline.h
ai_voice/src/: asr_test.cpp  llm_engine.cpp  local_asr.cpp  main.cpp  mic_capture.cpp  tts_engine.cpp  voice_pipeline.cpp
ai_voice/voice/: audio_init_hp.sh  audio_init_spk.sh  voice_bringup.md
ai_voice/whisper/: whisper_bringup.md
camera/: cap_res.c  cap_warm.c  v4l2_capture.c
deepseek/: RK3588S_LLM_部署流程.md
deepseek/demo_Linux_aarch64/: llm_demo
docs/: DRM_驱动学习笔记.md  IIO子系统.MD  V4L2_驱动学习笔记.md  input子系统.md
driver/blue_stm32/: JDY31.c  JDY31.h
driver/dht/: README.md  dht11_drv.c  test_dht11_v2  test_dht11_v2.c  test_dht11_v3  test_dht11_v3.c  test_dht11_v4  test_dht11_v4.c  test_dht11_v5  test_dht11_v5.c
driver/fmcw_radar/: .fmcw_radar.o.d  Makefile  fmcw_radar.c  fmcw_radar.ko  radar_bringup.md  radar_debug  radar_debug.c  radar_debug2  radar_debug2.c  radar_debug3  radar_debug3.c  radar_dump  radar_dump.c  radar_dump2  radar_dump2.c  radar_test  radar_test.c  start_radar.sh
driver/fmcw_radar/try/: standard_spi.c  start.sh
driver/key/: KEY驱动开发教程.md  probe_saradc.c
driver/led/: LED驱动开发教程.md  led_drv.c  test_led.c
driver/spi/: spi_test  spi_test.c
middleware/: radar_processor.cpp  radar_processor.h  test_processor  test_processor.cpp
qt_app/: BT_AUDIO_INTEGRATION_REPORT.md  BluetoothAudio.cpp  BluetoothAudio.h  Makefile  bt_audio_service.py  main.cpp  moc_radar_reader.cpp  moc_radar_widget.cpp  qt_app.pro  radar_app  radar_reader.cpp  radar_reader.h
